fixed wrong padding

--- a/scss/_topics.scss
+++ b/scss/_topics.scss
@@ -52,7 +52,7 @@ button.close:focus,
 }
 
 .topicsOut {
-  padding-top: 1rem;
+  //padding-top: 1rem;
   border-radius: 0 0 2rem 2rem;
 
   .topics {
